@@ -1,5 +1,6 @@
 recent:
 	fix install target to install section 7 manpages too
+	do protocol lookups properly
 
 0.8:
 	cleanup for iptables and ipchains to save reallocs
@@ -63,4 +64,4 @@ recent:
 	iptables driver
 	a few bugs
 
-$Id: HISTORY,v 1.33 2002/08/20 13:46:16 matthew Exp $
+$Id: HISTORY,v 1.34 2002/08/20 17:29:07 matthew Exp $
